# Automate-Data-Pipeline

./: README.md  pyproject.toml
[automate]/: metadata.yaml
[automate]/pipelines/esoteric_mountain/: metadata.yaml
